<resources>
    <string name="app_name">MD课表</string>
    <string name="app_version">0</string>

    <string name="qq_number">776310072</string>
    <string name="author_mnnyang">xxyangyoulin</string>
    <string name="author_blog">http://xxyangyoulin.cn</string>

    <string name="login">登录</string>
    <string name="user_add">手动添加</string>
    <string name="import_gzu">导入正方课表</string>
    <string name="kb_manage">课表管理</string>
    <string name="del_all">删除全部</string>

    <string name="default_noon_node">4</string>
    <string name="default_max_node_count">11</string>
    <string name="default_course_name">默认课表</string>

    <string name="app_preference_app_is_first_start">app_is_first_start</string>
    <string name="app_preference_hide_fab">hide_fab</string>
    <string name="app_preference_current_week_flag">current_week_flag</string>
    <string name="app_preference_start_week_begin_millis">start_week_begin_date</string>
    <string name="app_preference_max_node">max_node</string>
    <string name="app_preference_noon_node">noon_node</string>
    <string name="app_preference_show_noon">show_noon</string>
    <!--<string name="app_preference_current_sd_name">current_sd_name</string>-->
    <string name="app_preference_theme">theme</string>
    <string name="app_preference_bg_iamge_path">bg_image_path</string>
    <string name="app_preference_bg_enabled">bg_enabled</string>
    <string name="app_preference_current_cs_name_id">current_sd_name_id</string>



    <string name="chptcha">验证码</string>
    <string name="xh">学号</string>
    <string name="pwd">密码</string>
    <string name="captcha_err">验证码不正确</string>
    <string name="dialog_confirm_delete">确认要删除全部课程信息吗?</string>
    <string name="pwd_err">密码错误</string>
    <string name="string_course_time">%1$s&#160;&#160;%2$d-%3$d 节</string>
    <string name="setting">设置</string>
    <string name="add_course">添加课程</string>
    <string name="course_name">课程名称</string>
    <string name="please_note">请注意</string>
    <string name="deleting">正在删除</string>
    <string name="add_succeed">添加成功</string>
    <string name="select_course_time">选择上课时间</string>
    <string name="select_week_count">选择周数</string>
    <string name="feedback">反馈</string>
    <string name="please_wait_a_moment">请稍等…</string>
    <string name="qq_not_installed">抱歉，您没有安装QQ！</string>
    <string name="string_course_time_2"> %1$s&#160;&#160;%2$d 节</string>
    <string name="string_week_range">第%1$d-%2$d 周</string>
    <string name="show_noon_course">显示中午课程</string>
    <string name="show_noon_course_summary">显示中午时间的课程</string>
    <string name="hide_fab">隐藏添加按钮</string>
    <string name="hide_fab_summary">隐藏主界面右下角添加按钮</string>
    <string name="other">其他</string>
    <string name="version">版本</string>
    <string name="other_preference">其他配置</string>
    <string name="text_preference">偏好设置</string>
    <string name="edit_class_schedule">编辑课表</string>
    <string name="warning">警告</string>
    <string name="theme_preference">颜色风格</string>
    <string name="classroom">教室</string>
    <string name="now_version">有新版本</string>
    <string name="about">关于</string>

    <string name="github_lib">org.jsoup:jsoup:1.10.3\nio.reactivex:rxjava:1.1.3\nio.reactivex:rxandroid:1.0.1\ncom.google.code.gson:gson:2.8.2\ncom.zhy:okhttputils:2.6.2\nwangjie/wheelview</string>
    <string name="github_gzuclassschedule">https://github.com/mnnyang/GzuClassSchedule</string>


    <string name="check_update">检查更新</string>
    <string name="update_succeed">更新成功</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string name="refresh_captcha">点击刷新</string>
    <string name="no_more">没有更多了…</string>
    <string name="bottom_end">到底了…</string>
    <string name="please_input_course_table_name">请输入课程表名称</string>
    <string name="course_name_can_not_be_empty">课表名不能为空</string>
    <string name="course_name_is_conflicting">课程表名称已存在</string>
    <string name="you_can_not_delete_the_current_class_schedule">不能删除当前课表</string>
    <string name="edit_succeed">修改成功</string>
    <string name="course_name_already_exists">课表名称已经存在</string>
    <string name="user_add_summary">手动添加课程表数据</string>
    <string name="import_gzu_description">登录正方教务系统导入课程表</string>
    <string name="kb_manage_description">增加或删除课表数据</string>
    <string name="more_pref">更多选择</string>
    <string name="more_pref_summary">自定义其他参数</string>
    <string name="feedback_summary">通过QQ反馈意见</string>
    <string name="checking_for_updates">检查更新中…</string>
    <string name="already_the_latest_version">已是最新版本</string>
    <string name="access_err">抱歉，访问出错</string>
    <string name="confirm_to_delete">确定删除?</string>
    <string name="edit_course">编辑课程</string>
    <string name="delete">删 除</string>
    <string name="delete_succeed">删除成功</string>
    <string name="conf">配置</string>
    <string name="background_image">背景图片</string>
    <string name="conf_interface">界面</string>
    <string name="storage_explanation">需要读取存储空间和拍照权限才能继续操作!</string>
    <string name="select_image_failed">图片选择失败</string>

    <string name="bg_enabled">已启用背景</string>
    <string name="bg_disabled">已禁用背景</string>
    <string name="select_iamge_succeed">设置背景成功</string>
    <string name="select_school">选择学校</string>
    <string name="gzu">贵州大学</string>
    <string name="other_school">其他高校</string>
    <string name="school">学校</string>
    <string name="please_input_school_url">请输入教务管理系统网址</string>
    <string name="can_not_be_empty">不能为空</string>
</resources>
