<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--
        contentScrim:       折叠后ToolBar有背景颜色覆盖下面
        layout_scrollFlags: 响应滑动
        -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?android:attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--
            layout_collapseMode: 视觉差效果
            -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:layout_collapseMode="parallax"/>
            <!--
            app:layout_collapseMode="pin": 折叠后显示在最上面
            -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="导入课程表">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mnnyang.gzuclassschedule.custom.EditTextLayout
                android:id="@+id/etl_xh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="学号"
                app:icon="@drawable/ic_svg_user"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#20000000"/>

            <com.mnnyang.gzuclassschedule.custom.EditTextLayout
                android:id="@+id/etl_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/password"
                app:icon="@drawable/ic_svg_pwd"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#20000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.mnnyang.gzuclassschedule.custom.EditTextLayout
                    android:id="@+id/etl_captcha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hint="@string/captcha"
                    app:icon="@drawable/ic_svg_captcha"/>

                <LinearLayout
                    android:id="@+id/layout_refresh_captcha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:paddingRight="8dp">

                    <ImageView
                        android:id="@+id/iv_captcha"
                        android:layout_width="72dp"
                        android:layout_height="27dp"
                        android:layout_marginLeft="16dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:text="@string/refresh_captcha"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#20000000"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_btn_login"
                android:text="导入"
                android:textColor="@color/white_f1"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_btn_cancel"
                android:text="取消"
                android:textColor="@color/white_f1"
                android:textSize="16sp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
